# stacks

./: .gitignore  README.md  pyproject.toml  reviewer.py  tokenizador.json  ultima_transcricao.txt
audio/: pcm.py
audio/speech-to-text/: atencao.py  inferencia.py  main.py  residual.py  rvq.py  train.py  transcricao.py  utils.py
models/: diffusion.py  diffusion_model_denoise.py
models/gan/: model.py
models/vae/: vae.py
monte_carlo/: first_mc_prediction_v0.py  first_mc_prediction_v1.py  mc_prediction.py
numpy/: covariance_matrix.py  eigenvalues.py  high_dimensional_conditional_probability.py  perceptron_algo.py
pytorch/: eigenvalues.py  matrix_multi.py  mean_by_row_or_column.py  tensors.py  transpose.py
pytorch/models/: linear.py
salvos/: modelo_1000.pth  modelo_1200 2.pth  modelo_1200.pth  modelo_1400.pth  modelo_1600.pth  modelo_1800.pth  modelo_200.pth  modelo_2000.pth  modelo_2200.pth  modelo_2400.pth  modelo_2600.pth  modelo_2800.pth  modelo_400 2.pth  modelo_400.pth  modelo_600.pth  modelo_800 2.pth  modelo_800.pth
vision/: images.py  onda.py  ondinhas.py
